# test

./: .bazelignore  .bazelrc  .bazelrc.remote.example  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .mcp.json  AGENTS.md  BUILD.bazel  Cargo.toml  LICENSE  MEMORY.md  MODULE.bazel  README.md  TECH.md  biome.json  clippy.toml  deny.toml  lefthook.yml  markdownlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rust-toolchain.toml  rustfmt.toml  tarpaulin.toml  tsconfig.base.json  turbo.json
apps/web/: .env.local.example  .size-limit.json  .size-limit.mjs  BUILD.bazel  README.md  i18n.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  playwright-runtime.ts  playwright.config.ts  playwright.probes.config.ts  proxy.ts  tsconfig.bazel.json  tsconfig.json  vitest.bazel.unit.config.ts  vitest.config.ts  vitest.integration.config.ts
apps/web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/app/(authenticated)/: layout.tsx
apps/web/app/dev-x9-test/: dev-x9-test-client.tsx  page.tsx
apps/web/bazel/: next-build-smoke.mjs  next-cli.mjs  playwright-test.mjs  size-limit.mjs  vitest-unit.mjs
apps/web/lib/: api.ts  env.ts  naver-maps.ts  oidc.ts  pmtiles-source.ts  pmtiles.ts  query.tsx  ratelimit.ts  routes.ts  sw-register.ts  url.ts
apps/web/lib/api/: buildings.ts  (+2 more)
apps/web/stores/: index.ts  listings.ts
crates/api-health-recorder/: Cargo.toml
crates/api-health-recorder/src/: main.rs
crates/auth/: BUILD.bazel  Cargo.toml  README.md
crates/auth/src/: audit.rs  claims.rs  errors.rs  extractor.rs  jti_denylist.rs  jwks_cache.rs  lib.rs  middleware.rs  platform_core_service.rs  role_guard.rs  verifier.rs
crates/circuit-breaker/: BUILD.bazel  Cargo.toml  README.md
crates/circuit-breaker/src/: breaker.rs  execute.rs  lib.rs  policy.rs
crates/data-clients/data-go-kr/: Cargo.toml
crates/data-clients/r2-public-data/: Cargo.toml
crates/data-clients/raw-capture/: Cargo.toml
crates/data-clients/vworld/: Cargo.toml
crates/data-pipeline-control/: Cargo.toml  README.md
crates/data-pipeline-control/src/: errors.rs  lib.rs  repository.rs  run.rs  run_tests.rs  schedule.rs  schedule_tests.rs  status.rs  trigger_kind.rs
crates/db/: BUILD.bazel  Cargo.toml  README.md
crates/db/src/: admin_action.rs  analysis_report.rs  api_health.rs  audit_log.rs  audit_state.rs  bookmark.rs  bvq.rs  error_map.rs  lib.rs  listing.rs  listing_photo.rs  listing_report.rs  lrq.rs  notification.rs  operations_meta.rs  outbox.rs  pipeline.rs  platform_core_anchor.rs  raw_capture.rs  search_history.rs  user.rs
crates/db/tests/: admin_action_integration.rs  analysis_report_integration.rs  api_health_integration.rs  audit_log_integration.rs  bookmark_integration.rs  bvq_integration.rs  common.rs  error_map_integration.rs  listing_integration.rs  listing_marker_tile_integration.rs  listing_photo_integration.rs  listing_report_integration.rs  lrq_integration.rs  notification_integration.rs  operations_meta_integration.rs  outbox_integration.rs  outbox_publisher_integration.rs  pipeline_integration.rs  platform_core_anchor_import_integration.rs  raw_capture_integration.rs  search_history_integration.rs  user_integration.rs
crates/outbox-publisher/: BUILD.bazel  Cargo.toml
crates/outbox-publisher/src/: lib.rs  publisher.rs  sink.rs
crates/parcel-lookup/: BUILD.bazel  Cargo.toml
crates/parcel-lookup/src/: info.rs  lib.rs  lookup.rs  noop_lookup.rs  vworld_lookup.rs
crates/repo-guard/: BUILD.bazel  Cargo.toml
crates/repo-guard/src/: main.rs
crates/repo-guard/tests/: migration_version_prefixes_test.rs
crates/shared-kernel/: Cargo.toml  README.md
crates/shared-kernel/src/: address.rs  admin_division.rs  area.rs  broker_license.rs  business_number.rs  email.rs  geometry.rs  id.rs  ksic_code.rs  lib.rs  money.rs  phone_kr.rs  pnu.rs  srid.rs  time.rs
crates/sp9-base-layer-config/: Cargo.toml
crates/sp9-base-layer-config/src/: lib.rs  types.rs
infrastructure/: BUILD.bazel  Pulumi.local-preview.yaml  Pulumi.yaml  README.md  index.ts  package.json  tsconfig.json
infrastructure/docker/: .env.example  README.md  docker-compose.yml
infrastructure/docker/postgres/: init.sql
infrastructure/security/: README.md  aws-wafv2-edge-policy.generated.json  traffic-auth-edge-policy.generated.json
services/api/: BUILD.bazel  Cargo.toml  README.md
services/api/src/: app.rs  backend_authorization.rs  backend_rate_limit.rs  building_reader.rs  listing_marker_policy.rs  listing_marker_serving.rs  main.rs  observability.rs  photo_upload.rs  platform_core_anchor_import.rs  platform_core_auth.rs  platform_core_lakehouse_registry.rs  platform_core_parcel_lookup.rs  r2_raw_capture.rs  raw_capture_metadata.rs  startup.rs  traffic_auth_policy.rs
services/api/tests/: sp10_panel_endpoints.rs
services/etl-base-layer/: BUILD.bazel  Cargo.toml  Dockerfile.etl  README.md
services/etl-base-layer/scripts/: fetch-vworld-sig.mjs
services/etl-base-layer/src/: bronze.rs  bronze_cli.rs  cli.rs  config.rs  dtmk_prepare.rs  error.rs  gold_cli.rs  gold_upload.rs  handover.rs  main.rs  manifest.rs  r2_upload.rs  runtime.rs  test_support.rs  verify_cli.rs
services/etl-base-layer/tests/: platform_core_handover.rs
services/outbox-publisher/: BUILD.bazel  Cargo.toml  README.md
services/outbox-publisher/src/: listing_photo_lakehouse.rs  main.rs  platform_core_lakehouse_registry.rs
services/scraper-py/: README.md  dtmk_vworld.py  pyproject.toml  requirements.txt
services/scraper-py/tests/: test_dtmk_vworld.py
tools/bazel/: BUILD.bazel  check_release_artifacts.sh  check_sqlx_offline_data.sh  check_supply_chain_evidence.sh  generate_release_file_sbom.sh  generate_supply_chain_evidence_manifest.sh  install_bazelisk_ci.sh  run_biome_check.mjs  run_ci_transition_task.sh  run_guardrail_task.sh  run_pnpm_task.sh  rust_targets.bzl  rust_workspace.bzl  shell_test_compat.bzl  sqlx_cargo_metadata_stub.sh
(+1164 files in other folders)
