load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tools/bazel:shell_test_compat.bzl", "transition_shell_test")

package(default_visibility = ["//visibility:public"])

exports_files([
    "clippy.toml",
    "rustfmt.toml",
])

npm_link_all_packages(name = "node_modules")

filegroup(
    name = "bazel_control_plane",
    srcs = [
        ".bazelignore",
        ".bazelrc",
        ".bazelversion",
        ".npmrc",
        ".nvmrc",
        "MODULE.bazel",
        "package.json",
        "pnpm-lock.yaml",
        "pnpm-workspace.yaml",
    ],
)

filegroup(
    name = "cargo_workspace_inputs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "rust-toolchain.toml",
    ],
)

filegroup(
    name = "sqlx_offline_data",
    srcs = glob([".sqlx/*.json"]),
)

filegroup(
    name = "biome_lint_inputs",
    srcs = glob(
        [
            "apps/**/*.cjs",
            "apps/**/*.css",
            "apps/**/*.js",
            "apps/**/*.json",
            "apps/**/*.jsonc",
            "apps/**/*.jsx",
            "apps/**/*.mjs",
            "apps/**/*.ts",
            "apps/**/*.tsx",
            "docs/**/*.json",
            "docs/**/*.jsonc",
            "infrastructure/**/*.cjs",
            "infrastructure/**/*.js",
            "infrastructure/**/*.json",
            "infrastructure/**/*.jsonc",
            "infrastructure/**/*.mjs",
            "infrastructure/**/*.ts",
            "packages/**/*.cjs",
            "packages/**/*.css",
            "packages/**/*.js",
            "packages/**/*.json",
            "packages/**/*.jsonc",
            "packages/**/*.jsx",
            "packages/**/*.mjs",
            "packages/**/*.ts",
            "packages/**/*.tsx",
            "scripts/**/*.cjs",
            "scripts/**/*.js",
            "scripts/**/*.json",
            "scripts/**/*.jsonc",
            "scripts/**/*.mjs",
            "scripts/**/*.ts",
            "tests/**/*.cjs",
            "tests/**/*.js",
            "tests/**/*.json",
            "tests/**/*.jsonc",
            "tests/**/*.mjs",
            "tests/**/*.ts",
            "tools/**/*.cjs",
            "tools/**/*.js",
            "tools/**/*.json",
            "tools/**/*.jsonc",
            "tools/**/*.mjs",
            "tools/**/*.ts",
        ],
        exclude = [
            "**/.next/**",
            "**/.turbo/**",
            "**/_archive/**",
            "**/coverage/**",
            "**/dist/**",
            "**/node_modules/**",
            "**/playwright-report/**",
            "**/reference/**",
            "**/target/**",
            "**/test-results/**",
        ],
        allow_empty = True,
    ) + [
        ".gitignore",
        ".markdownlint-cli2.jsonc",
        ".markdownlint.json",
        ".mcp.json",
        "biome.json",
        "package.json",
        "renovate.json",
        "tsconfig.base.json",
        "turbo.json",
    ],
)

ts_config(
    name = "tsconfig_base",
    src = "tsconfig.base.json",
)

test_suite(
    name = "frontend_lint",
    tests = ["//tools/bazel:frontend_lint"],
    tags = ["manual"],
)

test_suite(
    name = "frontend_typecheck",
    tests = ["//tools/bazel:frontend_typecheck"],
    tags = ["manual"],
)

test_suite(
    name = "workspace_typecheck",
    tests = [
        ":frontend_typecheck",
        "//infrastructure:typecheck",
    ],
    tags = ["manual"],
)

test_suite(
    name = "frontend_unit_test",
    tests = ["//tools/bazel:frontend_unit_test"],
    tags = ["manual"],
)

test_suite(
    name = "frontend_build",
    tests = ["//tools/bazel:frontend_build"],
    tags = ["manual"],
)

test_suite(
    name = "frontend_bundle",
    tests = ["//tools/bazel:frontend_bundle"],
    tags = ["manual"],
)

test_suite(
    name = "frontend_e2e",
    tests = ["//tools/bazel:frontend_e2e"],
    tags = ["manual"],
)

alias(
    name = "api_types_typecheck_bazel",
    actual = "//packages/api-types:api_types_typecheck",
)

alias(
    name = "ui_typecheck_bazel",
    actual = "//packages/ui:ui_typecheck",
)

alias(
    name = "web_typecheck_bazel",
    actual = ":web_typecheck_typecheck",
)

alias(
    name = "web_next_production_build_bazel",
    actual = "//apps/web:next_production_build",
)

alias(
    name = "infrastructure_typecheck_bazel",
    actual = "//infrastructure:infrastructure_typecheck",
)

filegroup(
    name = "frontend_hermetic_typechecks",
    srcs = [
        ":api_types_typecheck_bazel",
        ":ui_typecheck_bazel",
        ":web_typecheck_bazel",
    ],
)

filegroup(
    name = "workspace_hermetic_typechecks",
    srcs = [
        ":frontend_hermetic_typechecks",
        ":infrastructure_typecheck_bazel",
    ],
)

filegroup(
    name = "frontend_hermetic_full_builds",
    srcs = [
        ":web_next_production_build_bazel",
    ],
)

genrule(
    name = "web_release_candidate_archive",
    srcs = ["//apps/web:next_production_build"],
    outs = ["gongzzang-web-next-build.tgz"],
    cmd = """
set -euo pipefail
staging="$(@D)/web_release_candidate_staging"
rm -rf "$$staging"
mkdir -p "$$staging/gongzzang-web-next-build"
cp -R "$(location //apps/web:next_production_build)" "$$staging/gongzzang-web-next-build/.next"
tar --sort=name --mtime='UTC 1970-01-01' --owner=0 --group=0 --numeric-owner \
    -czf "$@" -C "$$staging" gongzzang-web-next-build
""",
    tags = [
        "manual",
        "local",
    ],
)

genrule(
    name = "api_release_candidate_binary",
    srcs = ["//services/api:api_service"],
    outs = ["gongzzang-api-release/api"],
    cmd = """
set -euo pipefail
mkdir -p "$(@D)"
cp "$(location //services/api:api_service)" "$@"
chmod +x "$@"
""",
    tags = [
        "manual",
        "local",
    ],
)

filegroup(
    name = "release_candidate_artifacts",
    srcs = [
        ":api_release_candidate_binary",
        ":web_release_candidate_archive",
    ],
    tags = ["manual"],
)

genrule(
    name = "web_release_sbom",
    srcs = ["//apps/web:next_production_build"],
    outs = ["supply-chain/gongzzang-node-workspace-sbom.cdx.json"],
    cmd = """
set -euo pipefail
bash "$(location //tools/bazel:generate_release_file_sbom.sh)" \
    "$(location //apps/web:next_production_build)" \
    "$@" \
    "gongzzang-web-next-build" \
    "bazel-bin/gongzzang-web-next-build.tgz"
""",
    tags = [
        "manual",
        "local",
    ],
    tools = ["//tools/bazel:generate_release_file_sbom.sh"],
)

genrule(
    name = "api_release_sbom",
    srcs = [":api_release_candidate_binary"],
    outs = ["supply-chain/gongzzang-rust-workspace-sbom.cdx.json"],
    cmd = """
set -euo pipefail
bash "$(location //tools/bazel:generate_release_file_sbom.sh)" \
    "$(location :api_release_candidate_binary)" \
    "$@" \
    "gongzzang-api-release" \
    "bazel-bin/gongzzang-api-release/api"
""",
    tags = [
        "manual",
        "local",
    ],
    tools = ["//tools/bazel:generate_release_file_sbom.sh"],
)

genrule(
    name = "supply_chain_evidence_manifest",
    srcs = [
        ":api_release_candidate_binary",
        ":api_release_sbom",
        ":web_release_candidate_archive",
        ":web_release_sbom",
    ],
    outs = ["supply-chain/evidence-manifest.json"],
    cmd = """
set -euo pipefail
bash "$(location //tools/bazel:generate_supply_chain_evidence_manifest.sh)" \
    "$@" \
    "bazel-bin/gongzzang-web-next-build.tgz" \
    "bazel-bin/gongzzang-api-release/api" \
    "bazel-bin/supply-chain/gongzzang-node-workspace-sbom.cdx.json" \
    "bazel-bin/supply-chain/gongzzang-rust-workspace-sbom.cdx.json"
""",
    tags = [
        "manual",
        "local",
    ],
    tools = ["//tools/bazel:generate_supply_chain_evidence_manifest.sh"],
)

filegroup(
    name = "supply_chain_evidence_artifacts",
    srcs = [
        ":api_release_candidate_binary",
        ":api_release_sbom",
        ":supply_chain_evidence_manifest",
        ":web_release_candidate_archive",
        ":web_release_sbom",
    ],
    tags = ["manual"],
)

transition_shell_test(
    name = "release_artifact_contract_test",
    srcs = ["//tools/bazel:check_release_artifacts.sh"],
    data = [
        ":api_release_candidate_binary",
        ":web_release_candidate_archive",
    ],
    tags = [
        "manual",
        "local",
    ],
)

transition_shell_test(
    name = "supply_chain_evidence_contract_test",
    srcs = ["//tools/bazel:check_supply_chain_evidence.sh"],
    data = [
        ":api_release_sbom",
        ":supply_chain_evidence_manifest",
        ":web_release_sbom",
    ],
    tags = [
        "manual",
        "local",
    ],
)

test_suite(
    name = "verify_supply_chain",
    tests = [":supply_chain_evidence_contract_test"],
    tags = ["manual"],
)

WEB_TYPECHECK_DEPS = [
    "//apps/web:node_modules/@axe-core/playwright",
    "//apps/web:node_modules/@gongzzang/api-types",
    "//apps/web:node_modules/@gongzzang/ui",
    "//apps/web:node_modules/@hookform/resolvers",
    "//apps/web:node_modules/@opentelemetry/api",
    "//apps/web:node_modules/@opentelemetry/instrumentation-fetch",
    "//apps/web:node_modules/@opentelemetry/sdk-node",
    "//apps/web:node_modules/@playwright/test",
    "//apps/web:node_modules/@tailwindcss/postcss",
    "//apps/web:node_modules/@tanstack/react-query",
    "//apps/web:node_modules/@testing-library/jest-dom",
    "//apps/web:node_modules/@testing-library/react",
    "//apps/web:node_modules/@types/navermaps",
    "//apps/web:node_modules/@types/node",
    "//apps/web:node_modules/@types/react",
    "//apps/web:node_modules/@types/react-dom",
    "//apps/web:node_modules/@vitejs/plugin-react",
    "//apps/web:node_modules/class-variance-authority",
    "//apps/web:node_modules/clsx",
    "//apps/web:node_modules/happy-dom",
    "//apps/web:node_modules/ioredis",
    "//apps/web:node_modules/iron-session",
    "//apps/web:node_modules/ky",
    "//apps/web:node_modules/lucide-react",
    "//apps/web:node_modules/next",
    "//apps/web:node_modules/next-intl",
    "//apps/web:node_modules/oauth4webapi",
    "//apps/web:node_modules/pino",
    "//apps/web:node_modules/react",
    "//apps/web:node_modules/react-dom",
    "//apps/web:node_modules/react-hook-form",
    "//apps/web:node_modules/sonner",
    "//apps/web:node_modules/tailwind-merge",
    "//apps/web:node_modules/tailwindcss",
    "//apps/web:node_modules/typescript",
    "//apps/web:node_modules/vite",
    "//apps/web:node_modules/vitest",
    "//apps/web:node_modules/zod",
    "//apps/web:node_modules/zustand",
    "//packages/api-types:api_types_declarations",
    "//packages/ui:ui_declarations",
]

ts_project(
    name = "web_typecheck",
    srcs = [
        "//apps/web:source_files_to_bin",
        "//packages/api-types:source_files_to_bin",
        "//packages/ui:source_files_to_bin",
    ],
    deps = WEB_TYPECHECK_DEPS,
    incremental = True,
    no_emit = True,
    preserve_jsx = False,
    resolve_json_module = True,
    root_dir = ".",
    tsconfig = "//apps/web:tsconfig_bazel",
)

test_suite(
    name = "frontend_verification",
    tests = [
        ":frontend_lint",
        ":frontend_typecheck",
        ":frontend_unit_test",
    ],
    tags = ["manual"],
)

test_suite(
    name = "frontend_release_verification",
    tests = [
        ":frontend_build",
        ":frontend_bundle",
        ":frontend_e2e",
    ],
    tags = ["manual"],
)

test_suite(
    name = "verify_release",
    tests = [
        ":release_artifact_contract_test",
    ],
    tags = ["manual"],
)

test_suite(
    name = "rust_format_verification",
    tests = ["//tools/bazel:rustfmt_check"],
    tags = ["manual"],
)

test_suite(
    name = "rust_check_verification",
    tests = ["//tools/bazel:rust_check"],
)

filegroup(
    name = "rust_lint_verification",
    srcs = ["//tools/bazel:rust_clippy"],
    tags = ["manual"],
    testonly = True,
)

test_suite(
    name = "sqlx_prepare_verification",
    tests = ["//tools/bazel:sqlx_offline_metadata_check"],
    tags = ["manual"],
)

test_suite(
    name = "guardrails_fast",
    tests = [
        "//tools/bazel:guardrail_catalog_m1_boundary",
        "//tools/bazel:guardrail_file_line_limit",
        "//tools/bazel:guardrail_forbidden_implementation_markers",
        "//tools/bazel:guardrail_markdown_links",
        "//tools/bazel:guardrail_no_fake_pass",
        "//tools/bazel:guardrail_workspace_typecheck_coverage",
    ],
    tags = ["manual"],
)

test_suite(
    name = "guardrails_policy",
    tests = [
        "//tools/bazel:guardrail_bazel_transition_ratchet",
        "//tools/bazel:guardrail_coverage_transition_ssot",
        "//tools/bazel:guardrail_generated_artifact_registry",
        "//tools/bazel:guardrail_github_actions_node_runtime",
        "//tools/bazel:guardrail_lakehouse_registry_integration",
        "//tools/bazel:guardrail_load_test_assets",
        "//tools/bazel:guardrail_migration_version_prefixes",
        "//tools/bazel:guardrail_platform_core_anchor_inbox_db_approval",
        "//tools/bazel:guardrail_platform_core_boundary",
        "//tools/bazel:guardrail_platform_core_catalog_api_contract",
        "//tools/bazel:guardrail_platform_core_dependency_boundary",
        "//tools/bazel:guardrail_platform_core_event_receiver_contract",
        "//tools/bazel:guardrail_platform_integration_policy",
        "//tools/bazel:guardrail_pnu_anchor_pbf_marker_contract",
        "//tools/bazel:guardrail_traffic_auth_policy_registry",
        "//tools/bazel:guardrail_verification_task_registry",
        "//tools/bazel:guardrail_verification_control_plane",
    ],
    tags = ["manual"],
)

test_suite(
    name = "guardrails_policy_tests",
    tests = [
        "//tools/bazel:guardrail_bazel_transition_ratchet_tests",
        "//tools/bazel:guardrail_coverage_transition_ssot_tests",
        "//tools/bazel:guardrail_generated_artifact_registry_tests",
        "//tools/bazel:guardrail_github_actions_node_runtime_tests",
        "//tools/bazel:guardrail_load_test_assets_tests",
        "//tools/bazel:guardrail_traffic_auth_api_control_plane_tests",
        "//tools/bazel:guardrail_traffic_auth_policy_registry_tests",
        "//tools/bazel:guardrail_verification_control_plane_tests",
        "//tools/bazel:guardrail_verification_task_registry_tests",
    ],
    tags = ["manual"],
)

test_suite(
    name = "guardrails_all",
    tests = [
        ":guardrails_fast",
        ":guardrails_policy",
        ":guardrails_policy_tests",
    ],
    tags = ["manual"],
)
