[workspace]
resolver = "2"
members = [
    "crates/_placeholder",
    # services/* 와 다른 crates/* 는 sub-project 2+에서 추가됨.
    # _placeholder는 sub-project 2 첫 도메인 추가 시 삭제.
]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "UNLICENSED"
authors = ["공짱 <perfectoryinc@gmail.com>"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
# sub-project 2+에서 채움 (axum, sqlx, tokio, serde, tracing 등)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "migrate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
