[workspace]
resolver = "2"
members = [
    "crates/domain/core/shared-kernel",
    "crates/domain/core/user",
    "crates/domain/core/listing",
    "crates/domain/core/listing-photo",
    "crates/domain/core/parcel",
    "crates/domain/core/building",
    "crates/domain/core/industrial-complex",
    "crates/domain/core/manufacturer",
    "crates/domain/market/real-transaction",
    "crates/domain/market/court-auction",
    "crates/domain/insights/bookmark",
    "crates/domain/insights/search-history",
    "crates/domain/insights/analysis-report",
    "crates/domain/insights/notification",
    "crates/domain/audit/audit-log",
    "crates/domain/audit/outbox-event",
    "crates/operations/admin-action",
    "crates/data-pipeline-control",
    "crates/db",
    "services/api",
    # 다른 services/* 와 crates/* 는 sub-project 2+에서 추가됨.
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "UNLICENSED"
authors = ["공짱 <perfectoryinc@gmail.com>"]
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_imports = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
# 추가 예정 (Plan 2b/2c): utoipa
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
geo-types = { version = "0.7", features = ["serde"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "bigdecimal",
    "json",
    "migrate",
] }
thiserror = "1"
tokio = "1"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
