load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig_base"],
)

ts_project(
    name = "infrastructure_typecheck",
    srcs = [
        "index.ts",
        "package.json",
    ],
    deps = [
        "//:node_modules/typescript",
        ":node_modules/@pulumi/aws",
        ":node_modules/@pulumi/pulumi",
        ":node_modules/@types/node",
    ],
    no_emit = True,
    resolve_json_module = True,
    source_map = True,
    tsconfig = ":tsconfig",
)

test_suite(
    name = "typecheck",
    tests = [":infrastructure_typecheck_typecheck_test"],
)
