load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//contrib/nextjs:defs.bzl", "nextjs_build")
load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

WEB_SOURCES = glob(
    [
        "app/**/*.ts",
        "app/**/*.tsx",
        "components/**/*.ts",
        "components/**/*.tsx",
        "lib/**/*.ts",
        "lib/**/*.tsx",
        "stores/**/*.ts",
        "stores/**/*.tsx",
        "tests/**/*.ts",
        "tests/**/*.tsx",
        "*.ts",
        "*.tsx",
        "*.mjs",
    ],
    exclude = [
        ".next/**",
        ".turbo/**",
        "node_modules/**",
        "playwright-report/**",
        "test-results/**",
        "var/**",
        "tsconfig.tsbuildinfo",
    ],
    allow_empty = True,
)

WEB_APP_SOURCES = glob(
    [
        "app/**/*.ts",
        "app/**/*.tsx",
        "components/**/*.ts",
        "components/**/*.tsx",
        "lib/**/*.ts",
        "lib/**/*.tsx",
        "stores/**/*.ts",
        "stores/**/*.tsx",
        "i18n.ts",
        "instrumentation.ts",
        "next-env.d.ts",
        "proxy.ts",
    ],
    allow_empty = True,
)

WEB_STATIC = glob(
    [
        "public/**",
        "*.json",
    ],
    exclude = [
        "package.json",
        "tsconfig.json",
        "tsconfig.bazel.json",
    ],
    allow_empty = True,
)

WEB_ASSETS = glob(
    [
        "app/**/*.css",
        "components/**/*.css",
        "lib/**/*.css",
        "lib/**/*.json",
    ],
    allow_empty = True,
)

WEB_RUNTIME_DEPS = [
    ":node_modules/@gongzzang/api-types",
    ":node_modules/@gongzzang/ui",
    ":node_modules/@hookform/resolvers",
    ":node_modules/@opentelemetry/api",
    ":node_modules/@opentelemetry/instrumentation-fetch",
    ":node_modules/@opentelemetry/sdk-node",
    ":node_modules/@tailwindcss/postcss",
    ":node_modules/@tanstack/react-query",
    ":node_modules/@types/navermaps",
    ":node_modules/@types/node",
    ":node_modules/@types/react",
    ":node_modules/@types/react-dom",
    ":node_modules/class-variance-authority",
    ":node_modules/clsx",
    ":node_modules/ioredis",
    ":node_modules/iron-session",
    ":node_modules/ky",
    ":node_modules/lucide-react",
    ":node_modules/next",
    ":node_modules/next-intl",
    ":node_modules/oauth4webapi",
    ":node_modules/pino",
    ":node_modules/react",
    ":node_modules/react-dom",
    ":node_modules/react-hook-form",
    ":node_modules/sonner",
    ":node_modules/tailwind-merge",
    ":node_modules/tailwindcss",
    ":node_modules/typescript",
    ":node_modules/zod",
    ":node_modules/zustand",
]

WEB_TEST_DEPS = [
    ":node_modules/@axe-core/playwright",
    ":node_modules/@playwright/test",
    ":node_modules/@size-limit/preset-app",
    ":node_modules/@testing-library/jest-dom",
    ":node_modules/@testing-library/react",
    ":node_modules/@vitejs/plugin-react",
    ":node_modules/happy-dom",
    ":node_modules/size-limit",
    ":node_modules/vite",
    ":node_modules/vitest",
]

WEB_VITEST_UNIT_TESTS = glob(
    [
        "lib/**/*.test.ts",
        "lib/**/*.test.tsx",
        "tests/unit/**/*.test.ts",
        "tests/unit/**/*.test.tsx",
    ],
    exclude = [
        "lib/panel/panel-renderer.registry.test.tsx",
        "tests/unit/api-proxy-route.test.ts",
        "tests/unit/dev-x9-page.test.tsx",
        "tests/unit/home-page.test.tsx",
        "tests/unit/platform-core-events.test.ts",
        "tests/unit/playwright-workflow.test.ts",
        "tests/unit/proxy.test.ts",
        "tests/unit/ratelimit.test.ts",
        "tests/unit/session/single-flight.test.ts",
        "tests/unit/session/store.test.ts",
    ],
)

WEB_VITEST_UNIT_ARGS = [
    "run",
    "--config",
    "vitest.bazel.unit.config.ts",
    "--passWithNoTests",
] + WEB_VITEST_UNIT_TESTS

WEB_PLAYWRIGHT_E2E_TESTS = glob(
    [
        "tests/e2e/**/*.ts",
    ],
    allow_empty = True,
)

WEB_WORKSPACE_RUNTIME_DEPS = [
    "//packages/api-types:pkg",
    "//packages/ui:pkg",
]

WEB_WORKSPACE_TYPE_DEPS = [
    "//packages/api-types:api_types_declarations",
    "//packages/ui:ui_declarations",
]

WEB_NEXT_DEPS = WEB_RUNTIME_DEPS + WEB_WORKSPACE_RUNTIME_DEPS

WEB_TYPECHECK_DEPS = [
    ":node_modules",
] + WEB_RUNTIME_DEPS + WEB_TEST_DEPS + WEB_WORKSPACE_TYPE_DEPS

NEXT_BUILD_SOURCES = WEB_APP_SOURCES + WEB_ASSETS + WEB_STATIC + [
    "package.json",
    "postcss.config.mjs",
    "tsconfig.json",
]

js_binary(
    name = "next_js_binary",
    data = [
        ":node_modules/next",
    ],
    entry_point = "bazel/next-cli.mjs",
)

js_test(
    name = "vitest_unit_test",
    chdir = package_name(),
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":node_modules/vitest",
        ":pkg",
        "//packages/api-types:pkg",
        "//packages/ui:pkg",
    ],
    entry_point = "bazel/vitest-unit.mjs",
    fixed_args = WEB_VITEST_UNIT_ARGS,
    node_options = ["--preserve-symlinks"],
)

js_test(
    name = "bundle_size_test",
    chdir = package_name(),
    copy_data_to_bin = False,
    data = [
        ".size-limit.mjs",
        ":next_production_build",
        ":node_modules/@size-limit/preset-app",
        ":node_modules/size-limit",
    ],
    entry_point = "bazel/size-limit.mjs",
    node_options = ["--preserve-symlinks"],
    tags = [
        "manual",
        "local",
    ],
)

js_test(
    name = "playwright_e2e_test",
    chdir = package_name(),
    copy_data_to_bin = False,
    data = [
        ":node_modules",
        ":pkg",
        "bazel/next-cli.mjs",
        "//packages/api-types:pkg",
        "//packages/ui:pkg",
    ] + WEB_PLAYWRIGHT_E2E_TESTS,
    entry_point = "bazel/playwright-test.mjs",
    env = {
        "INTERNAL_AUTH_SECRET": "ci-e2e-internal-auth-secret-32-valid",
        "NEXT_PUBLIC_API_BASE_URL": "http://localhost:8080",
        "NEXT_PUBLIC_NAVER_MAPS_CLIENT_ID": "ci-e2e-naver-client",
        "NEXT_PUBLIC_PLATFORM_CORE_BASE_URL": "http://localhost:18082",
        "PLATFORM_CORE_WEBHOOK_SECRET": "ci-e2e-platform-core-webhook-secret-32",
        "REDIS_URL": "redis://localhost:6379",
        "SESSION_SECRET": "ci-test-secret-32-bytes-or-more-padding-padding",
        "ZITADEL_AUDIENCE": "ci-placeholder",
        "ZITADEL_CLIENT_ID": "ci-placeholder",
        "ZITADEL_ISSUER": "http://localhost:8443",
    },
    node_options = ["--preserve-symlinks"],
    tags = [
        "manual",
        "local",
        "no-sandbox",
    ],
)

js_test(
    name = "next_production_build_smoke_test",
    chdir = package_name(),
    copy_data_to_bin = False,
    data = [
        ":next_production_build",
    ],
    entry_point = "bazel/next-build-smoke.mjs",
    tags = [
        "manual",
        "local",
    ],
)

js_library(
    name = "pkg",
    srcs = WEB_SOURCES + WEB_ASSETS + WEB_STATIC + [
        "package.json",
        "tsconfig.json",
    ],
    deps = WEB_TYPECHECK_DEPS + WEB_WORKSPACE_RUNTIME_DEPS,
)

copy_to_bin(
    name = "source_files_to_bin",
    srcs = WEB_SOURCES + WEB_ASSETS + [
        "package.json",
    ],
)

nextjs_build(
    name = "next_production_build",
    config = "next.config.ts",
    srcs = NEXT_BUILD_SOURCES,
    data = WEB_NEXT_DEPS,
    env = {
        "GONGZZANG_BAZEL_NEXT_BUILD": "1",
        "INTERNAL_AUTH_SECRET": "bazel-internal-auth-secret-32-valid",
        "NEXT_PUBLIC_API_BASE_URL": "https://api.gongzzang.invalid",
        "NEXT_PUBLIC_NAVER_MAPS_CLIENT_ID": "bazel-build-naver-client-id",
        "NEXT_PUBLIC_PLATFORM_CORE_BASE_URL": "https://platform-core.gongzzang.invalid",
        "NEXT_TELEMETRY_DISABLED": "1",
        "PLATFORM_CORE_WEBHOOK_SECRET": "bazel-platform-core-webhook-secret-32-valid",
        "REDIS_URL": "rediss://redis.gongzzang.invalid:6379",
        "SESSION_SECRET": "bazel-production-session-secret-32-valid",
        "ZITADEL_AUDIENCE": "bazel-production-audience",
        "ZITADEL_CLIENT_ID": "bazel-production-client",
        "ZITADEL_ISSUER": "https://auth.gongzzang.invalid",
        "ZITADEL_REDIRECT_URI": "https://gongzzang.invalid/api/auth/callback",
    },
    next_js_binary = ":next_js_binary",
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_config(
    name = "tsconfig_bazel",
    src = "tsconfig.bazel.json",
    deps = [":tsconfig"],
)
