[package]
name = "api-health-recorder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 API health recorder — SP7-iii GitHub Actions cron 후속 binary (DB record + Issue orchestration)"

[[bin]]
name = "api-health-recorder"
path = "src/main.rs"

[dependencies]
api-health-domain = { path = "../operations/api-health", version = "0.1.0" }
db = { path = "../db", version = "0.1.0" }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
octocrab = "0.50"
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
