load("//tools/bazel:rust_workspace.bzl", "gongzzang_rust_library_with_unit_test")

package(default_visibility = ["//visibility:public"])

gongzzang_rust_library_with_unit_test(
    name = "auth",
    crate_name = "auth",
    srcs = glob(["src/**/*.rs"]),
    internal_deps = [
        "//crates/domain/core/shared-kernel:shared_kernel",
        "//crates/domain/core/user:user_domain",
    ],
)
