[package]
name = "data-pipeline-control"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0"
description = "공짱 Data Pipeline Control BC — PipelineSchedule (cron) + PipelineRun (status machine + steps JSONB)"

[dependencies]
shared-kernel = { path = "../domain/core/shared-kernel", version = "0.1.0" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
